--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -4,6 +4,6 @@ ygilany:
   url: https://yahya-gilany.com
   image_url: https://yahya-gilany.com/img/Yahya1.webp
 reedws:
-  name: Wes Reed
+  name: Andrew Lively
   title: Class Instructor
   image_url: https://avatars.githubusercontent.com/u/24629474?v=4
