--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
     "reedws",
     "Yahya",
     "yandeu",
-    "ygilany"
+    "ygilany",
+    "Lively",
+    "livelyar"
   ],
   "files.trimTrailingWhitespace": true
 }
