--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,6 +3,10 @@ ygilany:
   title: Class Instructor
   url: https://yahya-gilany.com
   image_url: https://yahya-gilany.com/img/Yahya1.webp
+reedws:
+  name: Wesley Reed
+  title: Class Instructor
+  image_url: https://avatars.githubusercontent.com/u/24629474?v=4
 livelyar:
   name: Andrew Lively
   title: Class Instructor
